--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-fastapi
+fastapi~=0.124.0
 uvicorn
-sqlalchemy
+sqlalchemy~=2.0.44
 psycopg2-binary
-pydantic-settings
+pydantic-settings~=2.12.0
+pydantic~=2.12.5
